# missive

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: interceptors.md  observability.md  preview.md  providers.md  templates.md  testing.md
src/: address.rs  attachment.rs  email.rs  error.rs  interceptor.rs  lib.rs  mailer.rs  storage.rs  template.rs  testing.rs
src/preview/: actix_routes.rs  axum_routes.rs  core.rs  mod.rs  routes.rs  standalone.rs
src/providers/: amazon_ses.rs  brevo.rs  local.rs  logger.rs  mailgun.rs  mailjet.rs  mailtrap.rs  mod.rs  postmark.rs  resend.rs  sendgrid.rs  smtp.rs  unsent.rs
templates/preview/: script.js  styles.css
tests/: adapters.rs  attachment_test.rs  email_test.rs  interceptor_test.rs  memory_storage_test.rs  preview_standalone_test.rs  preview_test.rs  test_assertions_test.rs
tests/adapters/: amazon_ses_test.rs  brevo_test.rs  local_test.rs  logger_test.rs  mailgun_test.rs  mailjet_test.rs  mailtrap_test.rs  postmark_test.rs  resend_test.rs  sendgrid_test.rs  unsent_test.rs
